--- a/estilo.css
+++ b/estilo.css
@@ -77,7 +77,7 @@ section ul li {
 }
 
 section ul li:hover {
-    transform: scale(1.1);
+    transform: scale(1.3);
 }
 
 .games-list img {
@@ -89,6 +89,10 @@ section ul li:hover {
     border-radius: 50%;
     width: 70%;
     border: 1px solid #443E54;
+}
+.movie-list img {
+    width: 90%;
+    border-radius: 8px;
 }
 
 header {
@@ -138,8 +142,12 @@ main section:nth-child(2) {
 }
 
 main section:nth-child(3) {
+    animation-delay: .6s;
+}
+main section:nth-child(4) {
     animation-delay: .8s;
 }
+
 
 /* primeiro passo de uma animation  */ 
 @keyframes fromTop {
