--- a/estilo.css
+++ b/estilo.css
@@ -165,11 +165,11 @@ main section:nth-child(4) {
 @keyframes fromBottom {
     from {
         opacity: 0;
-        transform: translateY(30px);
+        transform: translateX(30px);
     }
 
     to {
         opacity: 1;
-        transform: translateY(0);
+        transform: translateX(0);
     }
 }
